--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-radio-group": "^1.0.4",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
@@ -32,9 +33,13 @@
     "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-table": "^8.21.2",
     "@tsparticles/engine": "^3.8.1",
+    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/redis": "^1.34.9",
     "bcryptjs": "^3.0.2",
+    "bottleneck": "^2.19.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "lucide-react": "^0.487.0",
     "moment": "^2.30.1",
     "motion": "^12.7.3",
