--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "cmdk": "^1.1.1",
     "lucide-react": "^0.487.0",
     "moment": "^2.30.1",
-    "motion": "^12.7.3",
+    "motion": "^12.0.0-alpha.2",
     "nanoid": "^5.1.5",
     "next": "15.2.3",
     "next-auth": "^4.24.11",
@@ -59,7 +59,7 @@
     "simplex-noise": "^4.0.3",
     "sonner": "^2.0.3",
     "swr": "^2.3.3",
-    "tailwind-merge": "^3.2.0",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.175.0",
     "tsparticles": "^3.8.1",
