--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-hot-toast": "^2.5.2",
     "react-tsparticles": "^2.12.2",
     "recharts": "^2.15.2",
+    "request-ip": "^3.3.0",
     "simplex-noise": "^4.0.3",
     "sonner": "^2.0.3",
     "swr": "^2.3.3",
@@ -74,6 +75,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/request-ip": "^0.0.41",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
