--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-tsparticles": "^2.12.2",
     "recharts": "^2.15.2",
     "request-ip": "^3.3.0",
