--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@faker-js/faker": "^9.9.0",
     "@fireworks-js/react": "^2.10.8",
     "@headlessui/react": "^2.2.4",
     "@hookform/resolvers": "^5.0.1",
