--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-popover": "^1.1.13",
-    "@radix-ui/react-radio-group": "^1.0.4",
+    "@radix-ui/react-use-controllable-state": "1.1.1",
+    "@radix-ui/react-radio-group": "1.1.3",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.2.0",
